--- a/plan.html
+++ b/plan.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Plan</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="styl2.css" />
     </head>
     <body>
         <div id="plan">
